# ai-web-os

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BROWSER_AUTOMATION_PLAN.md  DEPLOYMENT_MODES.md  PROGRESS.md  SKILL_ARCHITECTURE.md  package.json  pnpm-lock.yaml  skills-lock.json  turbo.json
apps/api/: Dockerfile  alembic.ini  botpy.log.2026-05-15  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: config.py  main.py
apps/api/app/models/: app.py  (+10 more)
apps/api/scripts/: eval_agent_harness.py  eval_agent_metrics.py  eval_multi_agent_metrics.py
apps/api/tests/: test_agent_eval_metrics.py  test_agent_fallback_policy.py  test_agent_graph_runtime.py  test_agent_handoff.py  test_agent_multi_eval_metrics.py  test_agent_plan_preview.py  test_agent_runner.py  test_agent_tools_eval_offline.py  test_agent_traffic_metrics.py  test_agent_traffic_metrics_api.py  test_agent_usage_estimate.py  test_agents_complete_stream.py  test_avatar_assets.py  test_avatar_pet_skill_context.py  test_browser_runtime.py  test_channel_config.py  test_channel_hub.py  test_channels_api.py  test_context_manager.py  test_extension_registry.py  test_file_manager.py  test_legacy_memory_import.py  test_llm_provider_language.py  test_markdown_memory_manager.py  test_markdown_memory_paths.py  test_memory_api.py  test_memory_cli.py  test_memory_compat.py  test_memory_consolidation.py  test_memory_dreaming.py  test_memory_eval.py  test_memory_openclaw_parity.py  test_qqbotpy_adapter.py  test_skills_api.py  test_subagent.py  test_tool_capabilities.py  test_weather_api.py  test_weather_tool.py
(+237 files in other folders)
